# websocket

./: TODO  pyproject.toml
apps/: consumers.py  middleware.py  models.py  views.py
apps/migrations/: 0001_initial.py
root/: asgi.py  settings.py  urls.py
templates/apps/: room.html
