[tool.poetry]
name = "root"
version = "0.1.0"
description = ""
authors = ["Safaraliyev05 <uzblordsardorboy0705@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
channels-redis = "^4.2.0"
channels = { extras = ["daphne"], version = "^4.1.0" }
daphne = "^4.1.2"
ujson = "^5.10.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
psycopg2-binary = "^2.9.9"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
